--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,24 @@
 cmake_minimum_required(VERSION 3.10)
-project(netspeedmonitor LANGUAGES C)
-find_package(PkgConfig QUIET)
-    if(PkgConfig_FOUND)
-        pkg_check_modules(lxpanel lxpanel)
-        if(lxpanel_LIBRARIES)
-            message(">>> Found lxpanel libraries")
-            include_directories(${lxpanel_INCLUDE_DIRS})
-            link_directories(${lxpanel_LIBRARY_DIRS})
-        else()
-            message(FATAL_ERROR  ">>> Could not find lxpanel.")
-        endif()
+project(netspeedmonitor LANGUAGES C VERSION 0.0.2)
 
+include(GNUInstallDirs)
+find_package(PkgConfig QUIET)
+if(PkgConfig_FOUND)
+    pkg_check_modules(lxpanel lxpanel)
+    if(lxpanel_LIBRARIES)
+        message(">>> Found lxpanel libraries")
+        include_directories(${lxpanel_INCLUDE_DIRS})
+        link_directories(${lxpanel_LIBRARY_DIRS})
     else()
-        message(FATAL_ERROR ">>> Could not find pkg-config")
+        message(FATAL_ERROR  ">>> Could not find lxpanel.")
     endif()
 
+else()
+    message(FATAL_ERROR ">>> Could not find pkg-config")
+endif()
 add_library(netspeedmonitor SHARED netspeedmonitor.c)
 target_link_libraries(netspeedmonitor ${lxpanel_LIBRARIES})
 set_property(TARGET netspeedmonitor PROPERTY C_STANDARD 99)
 #remove lib prefix
 set_target_properties(netspeedmonitor PROPERTIES PREFIX "")
-install(TARGETS netspeedmonitor DESTINATION "${lxpanel_PREFIX}/lib/lxpanel/plugins")
+install(TARGETS netspeedmonitor DESTINATION "${CMAKE_INSTALL_LIBDIR}/lxpanel/plugins")
