check for gtk_box_new

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,21 @@ cmake_minimum_required(VERSION 3.10)
 project(netspeedmonitor LANGUAGES C VERSION 0.0.2)
 
 include(GNUInstallDirs)
+include(CheckSymbolExists)
 find_package(PkgConfig QUIET)
+
 if(PkgConfig_FOUND)
     pkg_check_modules(lxpanel lxpanel)
     if(lxpanel_LIBRARIES)
         message(">>> Found lxpanel libraries")
         include_directories(${lxpanel_INCLUDE_DIRS})
         link_directories(${lxpanel_LIBRARY_DIRS})
+	set(CMAKE_REQUIRED_INCLUDES ${lxpanel_INCLUDE_DIRS})
+	foreach(libdir ${lxpanel_LIBRARY_DIRS})
+		list(APPEND CMAKE_REQUIRED_LINK_OPTIONS "-L${libdir}")
+	endforeach()
+	set(CMAKE_REQUIRED_LIBRARIES ${lxpanel_LIBRARIES})
+	check_symbol_exists(gtk_box_new "gtk/gtk.h" HAVE_GTK_BOX)
     else()
         message(FATAL_ERROR  ">>> Could not find lxpanel.")
     endif()
@@ -18,6 +26,9 @@ else()
 endif()
 add_library(netspeedmonitor SHARED netspeedmonitor.c)
 target_link_libraries(netspeedmonitor ${lxpanel_LIBRARIES})
+if(HAVE_GTK_BOX)
+    target_compile_definitions(netspeedmonitor PRIVATE HAVE_GTK_BOX)
+endif()
 set_property(TARGET netspeedmonitor PROPERTY C_STANDARD 99)
 #remove lib prefix
 set_target_properties(netspeedmonitor PROPERTIES PREFIX "")
